--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
@@ -16,7 +17,36 @@
       <div id="formulario">
         <h2>Login</h2>
         <p>Seja bem-vindo novamente. Faça login para acessar sua conta e pode fazer as configurações do seu ambiente.</p>
-        <form action="login.js" method="post">
+        <form action="login.js" method="post" autocomplete="on">
+          <div class="campo">
+            <span class="material-symbols-outlined">person</span>
+            <input  type="email" 
+                    name="email" 
+                    id="iemail" 
+                    placeholder="Seu email" 
+                    autocomplete="email" 
+                    required 
+                    maxlength="30"
+            >
+            <label for="iemail">Login</label>
+          </div>
+
+          <div class="campo">
+            <span class="material-symbols-outlined">vpn_key</span>
+            <input  type="password" 
+                    name="senha" 
+                    id="isenha" 
+                    placeholder="Sua Senha" 
+                    autocomplete="current-password"
+                    required 
+                    minlength="8"
+            >
+            <label for="isenha">Senha</label>
+          </div>
+
+          <input type="submit" value="Entrar" class="submit-button">
+          <a href="esqueci.js" class="botao">Esqueci a Senha <span class="material-symbols-outlined">mail</span>
+          </a>
         </form>
       </div>
     </section>
