--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     placeholder="Seu email" 
                     autocomplete="email" 
                     required 
+                    minlength="8"
                     maxlength="30"
             >
             <label for="iemail">Login</label>
@@ -40,6 +41,7 @@
                     autocomplete="current-password"
                     required 
                     minlength="8"
+                    maxlength="16"
             >
             <label for="isenha">Senha</label>
           </div>
